tests/NormalTests/paczka1/fuzzy1/33715446.err
Error in line 3: BeVZ80Pu A154 96,7
Error in line 1: S32 A390 37,8
Error in line 13: jg7pzXNk21 S32 38,0
Error in line 19: jg7pzXNk21 A390 59,8
Error in line 30: S32 S32 49,1
Error in line 27: yaPYCtJ S32 24,5
